force-app/main/default/objects/WEBXJobList__c/WEBXJobList__c.object-meta.xml
<CustomObject>
    <description>record processing status of exporting/importing.</description>
    <label>Exporting/Importing Job List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exporting/Importing Job List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>