force-app/main/default/objects/WEBXJobList__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exporting</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Importing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>