force-app/main/default/objects/WEBXJobList__c/fields/CompleteNumber__c.field-meta.xml
<CustomField>
    <fullName>CompleteNumber__c</fullName>
    <label>Complete Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>