force-app/main/default/objects/WEBXJobList__c/fields/CompleteTime__c.field-meta.xml
<CustomField>
    <fullName>CompleteTime__c</fullName>
    <label>Complete Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>