force-app/main/default/objects/WEBXJobList__c/fields/CreateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateTime__c</fullName>
    <label>Create Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>