force-app/main/default/objects/WEBXJobList__c/fields/DistName__c.field-meta.xml
<CustomField>
    <fullName>DistName__c</fullName>
    <label>Distribution List</label>
    <length>64</length>
    <type>Text</type>
</CustomField>