force-app/main/default/objects/WEBXJobList__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <label>Event ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>