force-app/main/default/objects/WEBXJobList__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>Event Title</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>