force-app/main/default/objects/WEBXJobList__c/fields/FailedReason__c.field-meta.xml
<CustomField>
    <fullName>FailedReason__c</fullName>
    <description>When the job fails, we save error information to this field. It is only for logging usage.</description>
    <label>Failed Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>