force-app/main/default/objects/WEBXJobList__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>Export File Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>