force-app/main/default/objects/WEBXJobList__c/fields/ProcessID__c.field-meta.xml
<CustomField>
    <fullName>ProcessID__c</fullName>
    <label>Process ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>