force-app/main/default/objects/WEBXJobList__c/fields/SFUserID__c.field-meta.xml
<CustomField>
    <fullName>SFUserID__c</fullName>
    <label>SF Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>