force-app/main/default/objects/WEBXJobList__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ready</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>running</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>