force-app/main/default/objects/WEBXJobList__c/fields/UpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedTime__c</fullName>
    <label>Updated Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>